--- a/style.css
+++ b/style.css
@@ -22,8 +22,10 @@ body{
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: auto;
     grid-gap: 1rem;
     padding: 0 1rem;
+    align-content: center;
 }
 
 .img img{
@@ -43,6 +45,24 @@ body{
 
 .answer-container{
     display:flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+   
+    
+}
+
+.question-container__list{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items:flex-start;
+    width: 100%;
+    height: 100%;
+    margin-left: 2rem;
+
+}
+
+.answer-container__wrapper{
+    
 }
