--- a/style.css
+++ b/style.css
@@ -1,68 +1,74 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-
-body{
-    font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-.wave{
-    position: fixed;
+.wave {
+  position: fixed;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.main-wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-rows: auto 1fr;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: auto;
+  grid-gap: 1rem;
+  padding: 0 1rem;
+  align-content: center;
+  overflow: hidden;
+}
+
+.question-container__header{
     height: 100%;
-    left:0;
-    bottom: 0;
-    z-index: -1;
+    padding: 1rem;
 }
 
-.container{
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: auto;
-    grid-gap: 1rem;
-    padding: 0 1rem;
-    align-content: center;
+.img img {
+  width: 500px;
 }
 
-.img img{
-    width: 500px;
+.img {
+  display: flex;
+  align-items: center;
 }
 
-.img{
-    display:flex;
-    align-items: center;
+.question-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.question-container{
-    display:flex;
-    align-items: center;
-    justify-content: center;
+.answer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.answer-container{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-   
-    
-}
-
-.question-container__list{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items:flex-start;
-    width: 100%;
-    height: 100%;
-    margin-left: 2rem;
-
-}
-
-.answer-container__wrapper{
-    
+.question-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
 }
