--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  font-size: 1rem;
 }
 
 .wave {
@@ -23,52 +24,144 @@ body {
   justify-content: center;
   align-items: center;
   grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr;
 }
 
 .container {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: 1fr;
   grid-gap: 1rem;
   padding: 0 1rem;
   align-content: center;
   overflow: hidden;
 }
 
-.question-container__header{
-    height: 100%;
-    padding: 1rem;
+.question-container__header {
+  height: 100%;
+  padding: 1rem 0 0 2rem;
+}
+
+.question-container__description {
+  font-size: 0.95rem;
+  font-weight: 300;
+  line-height: 1.8;
 }
 
 .img img {
-  width: 500px;
+  width: 400px;
 }
 
 .img {
   display: flex;
   align-items: center;
-}
-
-.question-container {
-  display: flex;
-  align-items: center;
   justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 
 .answer-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr;
   justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.answer-container__title {
+  height: 50px;
+  line-height: 50px;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.answer-container__wrapper {
+  text-align: center;
+  padding: 0.5rem;
 }
 
 .question-container {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  padding: 2rem;
+  padding: 1rem;
+}
+
+.question-container__wrapper {
+  width: 380px;
+  padding: 1rem 0;
+  border-radius: 10px;
+  background: #f2f2f2;
+  box-shadow: 1px 1px 5px #cdcdcd, -1px -1px 5px #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.question-container__label {
+  padding-bottom: 0.5rem;
+}
+
+.question-container__input {
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 0.85rem;
+  color: #555;
+  padding: 10px 5px 10px 5px;
+  /* margin-bottom: 30px; */
+  border-radius: 10px;
+  box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #ffffff;
+}
+
+@media (max-width: 1240px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto 1fr;
+  }
+
+  .main-wrapper {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    /* grid-template-rows: auto 1fr; */
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto;
+  }
+
+  .question-container__header {
+    padding-bottom: 2rem;
+    margin: 0 auto;
+  }
+
+  .question-container__wrapper {
+    width: 280px;
+    padding: 0.5rem;
+  }
+
+  .question-container__label {
+    padding: 0.5rem;
+    font-size: 0.85rem;
+  }
+  .img img {
+    width: 250px;
+  }
+
+  .question-container{
+      padding: 0.5rem;
+  }
+  .question-container__description{
+      font-size: 0.85rem;
+  }
 }
