--- a/style.css
+++ b/style.css
@@ -37,6 +37,53 @@ body {
   overflow: hidden;
 }
 
+/* question-container */
+
+.question-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.question-container__wrapper {
+  width: 380px;
+  padding: 0.3rem 0;
+  border-radius: 10px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-bottom: 1rem;
+}
+
+.question-container__label {
+  padding-bottom: 1rem;
+  font-size: 1.1rem;
+  font-weight: 300;
+  text-align: left;
+  width: 100%;
+}
+
+.question-container__input {
+  border: #fff;
+  outline: none;
+  background: #fff;
+  border-radius: 10px;
+  font-size: 0.85rem;
+  color: #444;
+  padding: 0.5rem;
+  border-radius: 10px;
+  box-shadow: inset 1px 2px 3px #acabab, inset -1px -2px 3px rgb(223, 222, 222);
+}
+
 .question-container__header {
   height: 100%;
   padding: 1rem 0 0 2rem;
@@ -50,6 +97,8 @@ body {
 
 .img img {
   width: 400px;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 
 .img {
@@ -60,6 +109,7 @@ body {
   width: 100%;
 }
 
+/* answer-container */
 .answer-container {
   display: grid;
   grid-template-rows: auto 1fr;
@@ -91,35 +141,8 @@ body {
   width: 100%;
   height: 100%;
   padding: 1rem;
-}
-
-.question-container__wrapper {
-  width: 380px;
-  padding: 1rem 0;
-  border-radius: 10px;
-  background: #f2f2f2;
-  box-shadow: 1px 1px 5px #cdcdcd, -1px -1px 5px #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 1rem;
-}
-
-.question-container__label {
-  padding-bottom: 0.5rem;
-}
-
-.question-container__input {
-  border: none;
-  outline: none;
-  background: none;
-  font-size: 0.85rem;
-  color: #555;
-  padding: 10px 5px 10px 5px;
-  /* margin-bottom: 30px; */
-  border-radius: 10px;
-  box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #ffffff;
+  grid-column: 2/3;
+  grid-row: 1/2;
 }
 
 @media (max-width: 1240px) {
@@ -155,13 +178,24 @@ body {
     font-size: 0.85rem;
   }
   .img img {
-    width: 250px;
+    width: 200px;
+    grid-row: 3/4;
+    grid-column: 1/2;
   }
 
-  .question-container{
-      padding: 0.5rem;
+  .question-container {
+    padding: 0.5rem;
   }
-  .question-container__description{
-      font-size: 0.85rem;
+  .question-container__description {
+    font-size: 0.85rem;
+  }
+
+  .question-container {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+  .answer-container {
+    grid-row: 2/3;
+    grid-column: 1/2;
   }
 }
